2009-04-27

  Support for opening non-ASCII Japanese filenames in Windows,
  even without Japanese locale. [Mion]


2009-04-19

  Fully-functional "movie" command, including async & pos options.
  May be buggy. [Mion]


2009-04-17

  Incorporated insani's suggested "chvol" fix, redid "mp3fadeout",
  added "mp3fadein", "bgmfadeout", "bgmfadein" commands.
  Also various sound/music bugfixes. [Mion]


2009-04-15

  Incorporated changes from official onscripter-20090331. [Mion]


2009-04-14

  Corrected previously-fixed bugs reintroduced by the merge. [Mion]


2009-04-11

  Merged changes from experimental-effects branch: [Mion]
    * Emulate "trvswave", "whirl", "breakup" dll-based effects
    * Add support for effect layers: "setlayer", "layermessage" commands
    * Emulate "oldmovie", "snow", "hana" dll-based Layer effects
    * Add test scripts and images for testing dll-based emulations
    * Partial implementation of "movie" command (loop & click)
    * Enable GCC 4.3 autovectorization option (see configure --help)
    * Support for DirectSound on mingw builds:
      **  Add official SDL.dll & build libraries
      **  Configure mingw builds to use SDL.dll by default
    * Various bugfixes


2009-01-10

  Various bugfixes, notably CTRL-quake and mouseOverCheck stale-button
  crashes. [Mion]


2008-11-18

  GCC 4.3 introduces a whole bunch of new warnings for ambiguous
  parentheses and unchecked IO errors.  Applied a patch contributed by
  Tatu Kilappa that fixes most of these, and fixed the rest
  myself. [Haeleth]


2008-10-18

  Audio mixer now reinitializes itself when streaming audio format
  changes. [Mion]


2008-08-23

  Fixed some potential buffer overruns; thanks to Ivan Yanikov for the
  patches. [Haeleth]


2008-07-04

  Added return value 4 in "isskip" command for whole page mode. [Mion]

  Changed refreshSurface with windowback mode to draw a z-order sprite 
  in front of the tachie but behind the textwindow;